Refactored MViewOptimizer to be cleaner and more readable